--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5571,6 +5571,16 @@ section.main {
     color: #333333;
     font: 14px/18px 'OpenSansBold';
 }
+.order-delivery-address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.order-delivery-house,
+.order-delivery-building,
+.order-delivery-flat {
+    width: 32%;
+}
 label.radio:hover .order-item-name {
     color: #de002b;
 }
@@ -5601,14 +5611,14 @@ label.radio:hover .order-item-name {
 }
 .order-item-search-result li {
     margin: 0;
-    padding: 0;
+    padding: 0 10px;
 }
 .order-item-search-result li:before {
     display: none !important;
 }
 .order-item-search-result li a {
     display: block;
-    padding: 0 10px;
+    padding: 0;
     font: 15px/25px "OpenSansRegular";
 }
 .order-item-search-result li a:hover {
