--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,7 +51,7 @@
 .success_message,
 .error_message {
     display: none;
-    margin: 10px 0;
+    margin: 0 0 10px;
 }
 .message_error {
     color: red;
