--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2749,7 +2749,7 @@ section.main {
 .product-item {
     position: relative;
     width: 25%;
-    padding: 20px;
+    padding: 20px 20px 55px;
     text-align: center;
     background-color: #ffffff;
     border: 1px solid #eeeeee;
@@ -2834,6 +2834,7 @@ section.main {
     opacity: 1;
 }
 .product-item-title {
+    max-height: 60px;
     font: 14px/20px 'OpenSansBold';
 }
 .product-item:hover .product-item-title a {
@@ -2882,26 +2883,26 @@ section.main {
 .product-item-currency {}
 .product-item-measure {}
 .product-item-buy {
-    display: none;
+    /*display: none;*/
     position: absolute;
-    bottom: -56px;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 34px;
-    padding: 20px 0;
+    /*height: 34px;*/
+    padding: 0 0 20px;
     background-color: #ffffff;
 }
-.product-item:hover .product-item-buy {
-    display: block;
-    margin: 0 -2px;
-    box-sizing: content-box;
-    border: 2px solid #e7e7e7;
-    border-top: none;
-}
+/*.product-item:hover .product-item-buy {*/
+/*    display: block;*/
+/*    margin: 0 -2px;*/
+/*    box-sizing: content-box;*/
+/*    border: 2px solid #e7e7e7;*/
+/*    border-top: none;*/
+/*}*/
 .product-item-counter {
     display: inline-block;
     width: 84px;
-    height: 36px;
+    height: 34px;
     font-size: 0;
     border: 1px solid #f3f3f5;
     border-radius: 2px;
@@ -2923,7 +2924,7 @@ section.main {
 .product-item-minus:before {
     display: inline-block;
     width: 24px;
-    height: 34px;
+    height: 32px;
     opacity: .7;
     content: "";
     background: url(/images/ai.svg) -80px -191px no-repeat;
@@ -2940,12 +2941,13 @@ section.main {
     vertical-align: middle;
 }
 .product-item-quantity {
-    width: 34px;
-    height: 34px;
+    width: 32px;
+    height: 32px;
     color: #666666;
     font: 13px/13px 'OpenSansSemiBold';
     text-align: center;
     background: #f3f3f5;
+    outline: 0;
     border: 0;
     border-left: 1px solid #f3f3f5;
     border-right: 1px solid #f3f3f5;
