--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5367,8 +5367,8 @@ section.main {
     text-align: center;
 }
 .basket-item-image img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 150px;
+    max-height: 150px;
 }
 .basket-item-desc {
     flex: 1 1 auto;
