--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3607,22 +3607,36 @@ section.main {
     opacity: 1;
 }
 .product-slide {
-    display: flex;
+    display: block;
     width: 100%;
+    height: 116px;
     padding: 8px;
     border: 1px solid #f3f3f5;
+    /*border: 1px solid red;*/
+}
+.product-slide-container {
+    display: flex;
 }
 .product-slide-item {
-    width: 25%;
+    width: 95px !important;
+    height: 100px !important;
     margin: auto;
     padding: 5px;
+    text-align: center !important;
     border: 1px solid transparent;
+    /*border: 1px solid blue;*/
 }
 .product-slide-item:hover {
     border: 1px solid #f3f3f5;
 }
+.product-slide-item a {
+    display: block;
+    height: 100px;
+}
 .product-slide-item img {
-    width: 100%;
+    max-width: 85px;
+    max-height: 90px;
+    margin: 0 auto;
 }
 .product-info-tech {
     display: flex;
