--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,6 +46,9 @@
 .error {
     border: 1px solid red !important;
 }
+.inactive {
+    color: #999999 !important;
+}
 .message_error,
 .message_success,
 .success_message,
@@ -2123,6 +2126,16 @@ section.main {
     border: 1px solid #f2f2f2;
     background: #f8f8f9;
 }
+.catalog-leftmenu-item.current:before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 2px;
+    content: '';
+    background: #bf0025;
+
+}
 .catalog-leftmenu-link {
     flex: 1 0 auto;
     display: inline-block;
@@ -2644,6 +2657,7 @@ section.main {
 .subcategories-container {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
     overflow: visible;
 }
 .subcategories-item {
@@ -2685,9 +2699,9 @@ section.main {
     margin: 0 0 20px;
 }
 .product-sort {
-    flex: 1 1 auto;
+    flex: 1 0 auto;
 }
-.product-view {
+.product-filter-view {
     flex: 0 0 auto;
     width: 150px;
     text-align: right;
@@ -2722,7 +2736,7 @@ section.main {
 .sort-product.active a:after {
     color: #333333;
 }
-.view-product {
+.view-filter-product {
     display: inline-block;
     width: 35px;
     height: 35px;
@@ -2733,27 +2747,27 @@ section.main {
     background: #f5f5f5;
     border-radius: 2px;
 }
-.view-product.active {
+.view-filter-product.active {
     background: #de002b;
 }
-.view-product i {
+.view-filter-product i {
     display: inline-block;
     width: 13px;
     height: 13px;
     vertical-align: middle;
 }
-.view-product.block i {
+.view-filter-product.blocks i {
     background: url("/images/view.svg") no-repeat 0 -17px;
 }
-.view-product.list i {
+.view-filter-product.list i {
     background: url("/images/view.svg") no-repeat -29px -17px;
 }
-.view-product.table i {
+.view-filter-product.table i {
     background: url("/images/view.svg") no-repeat -57px -17px;
 }
-.view-product.block.active i,
-.view-product.list.active i,
-.view-product.table.active i {
+.view-filter-product.blocks.active i,
+.view-filter-product.list.active i,
+.view-filter-product.table.active i {
     background-position-y: 0;
 }
 /* PRODUCT BLOCK */
@@ -2869,6 +2883,10 @@ section.main {
 .product-item-articul {
     margin-top: 5px;
     color: #999999;
+}
+.product-price-title {
+    color: #999999;
+    font: 12px/16px 'OpenSansRegular';
 }
 .product-item-oldprice {
     position: relative;
@@ -3970,6 +3988,38 @@ section.main {
 }
 .product-review-button input {
     margin: 0 0 0 15px;
+}
+.product-quantity-item {
+    padding: 8px 0;
+}
+.product-quantity-item:before {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+    display: block;
+    content: "";
+    border-bottom: 1px dotted #c3c3c3;
+}
+.product-quantity-name {
+    position: relative;
+    display: inline-block;
+    padding: 0 10px;
+    background-color: #ffffff;
+    overflow: visible;
+}
+.product-quantity-count {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    margin-top: -10px;
+    padding: 0 10px;
+    background-color: #ffffff;
+}
+.product-quantity-item:hover,
+.product-quantity-item:hover .product-quantity-name,
+.product-quantity-item:hover .product-quantity-count {
+    background: #f7f7f7;
 }
 .product-other {
     margin: 20px 0 10px;
